--- a/Dockerfile7.2-apk
+++ b/Dockerfile7.2-apk
@@ -8,7 +8,8 @@ MAINTAINER gw123  <963353840@qq.com>
 WORKDIR /data/wwwroot
 RUN mkdir -p /data/wwwroot&&adduser -D -s /sbin/nologin -h /data/wwwroot www
 RUN apk add php7 php7-fpm
-RUN sed 's/127.0.0.1/0.0.0.0/' /etc/php7/php-fpm.d/www.conf 
+RUN sed -i 's/127.0.0.1/0.0.0.0/' /etc/php7/php-fpm.d/www.conf 
+RUN sed -i 's/nobody/www/' /etc/php7/php-fpm.d/www.conf 
 RUN apk add php7-mysqli php7-pdo_mysql php7-mbstring php7-curl\
         php7-json php7-zlib php7-gd php7-intl php7-session php7-tokenizer\
 	php7-openssl php7-mysqlnd php7-mysqli php7-zip php7-pdo php7-dom php7-iconv \
